# nett-ef.github.io

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: donate-crypto.yaml  static.yml
donate-crypto/: browserconfig.xml  config.yaml  index.html  local.env.example  make_index.py  make_qr.py  pyproject.toml  site.webmanifest
donate-crypto/css/: default.css  dev-colors.css
donate-crypto/js/: default.js
donate-crypto/py/: common.py  config.yaml  local.env  make_index.py  make_qr.py
donate-crypto/py/templates/: index.jinja
donate-crypto/templates/: index.jinja
